syntax = "proto3";

import "uniform.proto";

package frame.proto;

// This is the description of a Scene type this will define witch rendering
// technique will be used with the current program.
// Next 2
message SceneType {
	enum Enum {
		NONE			= 0;
		QUAD			= 1;
		CUBE			= 2;
		SCENE			= 3;
	}
	Enum value = 1;
}

// Description of an effect that can be used as a 2D effect on a rendering or
// as a shader for material.
// Next 10
message Program {
	// Name of the effect.
	string name = 1;
	// Input texture names (this should come from scene?).
	repeated string input_texture_names = 3;
	// Output texture names.
	repeated string output_texture_names = 4;
	// Input Scene type (this should come from scene?).
	// In case you select 'SCENE' you'll have to set the input_scene_root_name.
	SceneType input_scene_type = 9;
	// Input Scenes name.
	string input_scene_root_name = 5;
	// Shader name (used to find the shader).
	string shader = 6;
	// Additionnal uniforms for the shader.
	repeated Uniform uniforms = 7;
}
